# crema

./: .gitignore  README.md  config.py  main.py  pyproject.toml
api/: auth.py  deps.py  main.py  schemas.py
api/routers/: brews.py  kiosk.py  stats.py  status.py  users.py
cli/: db.py  logs.py  main.py  sensor.py  service.py  stats.py  users.py
core/: db.py  events.py  kiosk.py  state.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: DailyChart.tsx  Leaderboard.tsx  RecentBrews.tsx  Skeleton.tsx  StatsCards.tsx  StatusBadge.tsx
dashboard/src/hooks/: usePolling.ts
dashboard/src/kiosk/: KioskApp.tsx
dashboard/src/kiosk/hooks/: useKioskSocket.ts
dashboard/src/kiosk/overlays/: RatingPrompt.tsx  Reconnecting.tsx
deploy/: crema-api.service  crema-browser.service  crema-kiosk.service  install.sh  uninstall.sh  update.sh
dev/: api-reference.md  architecture.md  deployment.md  hardware.md  kiosk-ui.md  state-machine.md
docs/superpowers/plans/: 2026-05-10-crema-api.md  2026-05-10-dashboard-and-auth.md  2026-05-10-espresso-tracker.md
docs/superpowers/specs/: 2026-05-10-espresso-tracker-design.md  2026-05-12-hardware-upgrade-kiosk-ui-design.md
hardware/: adxl345.py  display.py  scanner.py  sensor.py
scripts/: check_sensor.py  check_sensor_raw.py  check_spi_ce0.py  check_spi_modes.py
tests/: conftest.py  test_api.py  test_db.py  test_events.py  test_scanner.py  test_sensor.py  test_state.py
tools/: sensor_monitor.py  stats.py
(+5 files in other folders)
