[project]
name = "crema"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "RPi.GPIO",
    "evdev",
    "adafruit-circuitpython-rgb-display",
    "Pillow",
    "click",
]

[project.scripts]
crema = "cli.main:cli"

[tool.setuptools]
py-modules = ["config", "main"]
packages   = ["core", "hardware", "cli"]
