[project]
name = "crema"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "evdev",
    "adafruit-circuitpython-rgb-display",
    "adafruit-circuitpython-adxl34x",
    "Pillow",
    "click",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "aiofiles",
]

[project.scripts]
crema = "cli.main:cli"

[tool.setuptools]
py-modules = ["config", "main"]
packages   = ["core", "hardware", "cli", "api", "api.routers"]
